<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UA CrowdSource</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">UA CrowdSource Login</string>
    <string name="register_title">Register for UA CrowdSource</string>
    <string name="username">Email Address:</string>
    <string name="password">Password:</string>
    <string name="password2">Confirm Password:</string>
    <string name="login">Login</string>
    <string name="register">Register Now!</string>
    <string name="newUser">New user? Register here...</string>
    <string name="checkIn">Check In!</string>
    <string name="youre_done">You\'re done!</string>
    <string name="waiting_for_content">Now just push the button below and pull in event content!</string>
    <string name="pullContent">Search for Event Content!</string>
    <string name="stats">Your Stats at </string>
    <string name="triviatext">Trivia:  </string>
    <string name="polltext">Polls:  </string>
    <string name="question">Default Question</string>
    <string name="choiceA">Choice A</string>
    <string name="choiceB">Choice B</string>
    <string name="choiceC">Choice C</string>
    <string name="choiceD">Choice D</string>

    <color name="crimson">#A80532</color>
    <color name="white">#FFFFFF</color>
    <color name="black">#000000</color>

    <string name="title_activity_event_list">Events Near You</string>
    <string name="title_activity_register">Register for UA CrowdSource!</string>
    <string name="title_activity_event">EventActivity</string>
    <string name="title_activity_interaction">Answer Now!</string>

</resources>