<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:paddingBottom="@dimen/activity_vertical_margin"
   android:paddingLeft="@dimen/activity_horizontal_margin"
   android:paddingRight="@dimen/activity_horizontal_margin"
   android:paddingTop="@dimen/activity_vertical_margin"
   android:background="@color/crimson"
   tools:context=".InteractionActivity" >

   <TextView
       android:id="@+id/question"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignLeft="@+id/choiceA"
       android:layout_alignParentRight="true"
       android:layout_alignParentTop="true"
       android:layout_marginTop="18dp"
       android:text="@string/question"
       android:gravity="center"
       android:textAppearance="?android:attr/textAppearanceLarge"
       android:textColor="@color/white" />

   <Button
       android:id="@+id/choiceA"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_below="@+id/question"
       android:layout_marginTop="110dp"
       android:background="@color/black"
       android:onClick="selectChoiceA"
       android:text="@string/choiceA"
       android:textColor="@color/white" />
   
   <Button
       android:id="@+id/choiceB"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_below="@+id/choiceA"
       android:layout_marginTop="15dp"
       android:background="@color/black"
       android:onClick="selectChoiceB"
       android:text="@string/choiceB"
       android:textColor="@color/white" />
   
   <Button
       android:id="@+id/choiceC"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_below="@+id/choiceB"
       android:layout_marginTop="15dp"
       android:background="@color/black"
       android:onClick="selectChoiceC"
       android:text="@string/choiceC"
       android:textColor="@color/white" />
   
   <Button
       android:id="@+id/choiceD"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_below="@+id/choiceC"
       android:layout_marginTop="15dp"
       android:background="@color/black"
       android:onClick="selectChoiceD"
       android:text="@string/choiceD"
       android:textColor="@color/white" />

</RelativeLayout>