<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:paddingBottom="@dimen/activity_vertical_margin"
   android:paddingLeft="@dimen/activity_horizontal_margin"
   android:paddingRight="@dimen/activity_horizontal_margin"
   android:paddingTop="@dimen/activity_vertical_margin"
   android:background="@color/crimson"
   tools:context=".EventActivity" >

   <TextView
       android:id="@+id/textView1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentTop="true"
       android:layout_centerHorizontal="true"
       android:layout_marginTop="18dp"
       android:text="@string/youre_done"
       android:textAppearance="?android:attr/textAppearanceLarge"
       android:textColor="@color/white"
       android:textSize="30dp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="81dp"
        android:text="@string/waiting_for_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="center"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignRight="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="22dp"
        android:background="@color/black"
        android:onClick="getContent"
        android:text="@string/pullContent"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignRight="@+id/button1"
        android:layout_below="@+id/button1"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/stats"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />

    <LinearLayout
	    android:id="@+id/triviastats"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/textView3"
	    android:padding="5dp">
	    
	    <ImageView
	        android:id="@+id/imageView1"
	        android:layout_width="75dp"
	        android:layout_height="75dp"
	        android:layout_alignLeft="@+id/textView3"
	        android:layout_below="@+id/textView3"
	        android:src="@drawable/triviacheck" />
	    
	</LinearLayout>

    <LinearLayout
	    android:id="@+id/pollstats"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/triviastats"
	    android:padding="5dp">
	    
	    <ImageView
	        android:id="@+id/imageView2"
	        android:layout_width="75dp"
	        android:layout_height="75dp"
	        android:src="@drawable/pollquestion" />
	     
	</LinearLayout>

    <TextView
        android:id="@+id/triviatext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/triviastats"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="29dp"
        android:layout_toRightOf="@+id/triviastats"
        android:gravity="center"
        android:text="@string/triviatext"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/polltext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/triviatext"
        android:layout_alignTop="@+id/pollstats"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:text="@string/polltext"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white" />
	
</RelativeLayout>