<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:paddingBottom="@dimen/activity_vertical_margin"
   android:paddingLeft="@dimen/activity_horizontal_margin"
   android:paddingRight="@dimen/activity_horizontal_margin"
   android:paddingTop="@dimen/activity_vertical_margin"
   android:background="@color/crimson"
   tools:context=".RegisterActivity" >

   <TextView
       android:id="@+id/textView1"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_alignParentLeft="true"
       android:layout_alignParentRight="true"
       android:layout_alignParentTop="true"
       android:layout_marginTop="18dp"
       android:text="@string/register_title"
       android:textAppearance="?android:attr/textAppearanceLarge"
       android:textColor="@color/white"
       android:textSize="21dp" />

   <TextView
      android:id="@+id/textView2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_below="@+id/textView1"
      android:layout_marginTop="50dp"
      android:text="@string/username"
      android:textColor="@color/white"
      android:textAppearance="?android:attr/textAppearanceMedium" />

   <EditText
      android:id="@+id/editText1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignBottom="@+id/textView2"
      android:layout_marginLeft="32dp"
      android:layout_toRightOf="@+id/textView2"
      android:singleLine="true"
      android:ems="10" >

      <requestFocus />
   </EditText>

   <TextView
       android:id="@+id/textView3"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignLeft="@+id/textView2"
       android:layout_below="@+id/textView2"
       android:layout_marginTop="38dp"
       android:text="@string/password"
       android:textAppearance="?android:attr/textAppearanceMedium"
       android:textColor="@color/white" />

   <EditText
      android:id="@+id/editText2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignBottom="@+id/textView3"
      android:layout_alignLeft="@+id/editText1"
      android:singleLine="true"
      android:ems="10"
      android:inputType="textPassword" />
   
   <TextView
       android:id="@+id/textView4"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignLeft="@+id/textView3"
       android:layout_below="@+id/textView3"
       android:layout_marginTop="38dp"
       android:text="@string/password2"
       android:textAppearance="?android:attr/textAppearanceMedium"
       android:textColor="@color/white" />

   <EditText
      android:id="@+id/editText3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignBottom="@+id/textView4"
      android:layout_alignLeft="@+id/editText2"
      android:singleLine="true"
      android:ems="10"
      android:inputType="textPassword" />

   <Button
       android:id="@+id/button1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignLeft="@+id/textView3"
       android:layout_alignParentBottom="true"
       android:layout_alignRight="@+id/editText2"
       android:layout_marginBottom="102dp"
       android:background="@color/black"
       android:onClick="register"
       android:text="@string/register"
       android:textColor="@color/white" />

</RelativeLayout>